--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Working practice</h1>
+    <h1 id="h">Working practice</h1>
+    <script src="index.js"></script>
 </body>
 </html>
